--- a/project6/springboot/src/main/resources/application.yml
+++ b/project6/springboot/src/main/resources/application.yml
@@ -8,6 +8,6 @@ mybatis:
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    username: root
-    password: 123456
-    url: jdbc:mysql://localhost:3306/springboot?characterEncoding=utf8&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+    username: remote_user
+    password: Wcfmaster2003$
+    url: jdbc:mysql://162.14.71.188:3306/Datas?characterEncoding=utf8&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
